# main

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test_matrix.yml
python_main/: __init__.py
tests/: test_basic.py
