[tool.poetry]
name = "python-main"
version = "0.0.2"
description = "@main decorator which runs the tagged function if the current module is being run. No more if __name__ == \"__main__\":. That's it!"
authors = ["Cadu <cadu.coelho@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
